Remove ditched server code
Switch to WebRTC p2p connections

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
 # Logs
 logs
 *.log
@@ -145,6 +146,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
 
 # yarn v2
 .yarn/cache
@@ -155,17 +157,3 @@ dist
 
 # bun
 bun.lockb
-
-# cmake
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-cmake-build
