--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "path": "^0.12.7",
+    "peerjs": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-split": "^2.0.14",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
