--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,18 +20,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-			"@components/*": [
-				"./src/components/*"
-			],
-			"@models/*": [
-				"./src/model/*"
-			],
-			"@styles/*": [
-				"./src/styles/*"
-			],
-			"@src/*": [
-				"./src/*"
-			],
+			"@components/*": [ "./src/components/*" ],
+			"@models/*": [ "./src/model/*" ],
+			"@styles/*": [ "./src/styles/*" ],
+      "@network": [ "./src/Network.ts" ],
+			"@src/*": [ "./src/*" ],
 		}
   },
   "include": ["src"],
