--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-split": "^2.0.14",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
-    "remixicon-react": "^1.0.0"
+    "remixicon-react": "^1.0.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
