--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "path": "^0.12.7",
-    "peerjs": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-split": "^2.0.14",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "remixicon-react": "^1.0.0",
+    "socket.io-client": "^4.7.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
