--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,3 @@
 VITE_WEBSOCKET=ws://localhost:8000 # Change to ws://socket.harmonyhub.com
+VITE_WEBSERVER=http://localhost:8080 # Change to https://server.harmonyhub.com
+VITE_HARMONYHUB=http://localhost:5173 # Change to https://harmonyhub.com
