--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
     "dotenv": "^16.3.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
