--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@ebay/nice-modal-react": "^1.2.13",
+    "allotment": "^1.19.3",
     "dotenv": "^16.3.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-split": "^2.0.14",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "remixicon-react": "^1.0.0",
