--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ebay/nice-modal-react": "^1.2.13",
     "allotment": "^1.19.3",
     "dotenv": "^16.3.1",
+    "immer": "^10.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
