--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3.16.2",
