--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^9.1.3",
     "remixicon-react": "^1.0.0",
     "socket.io-client": "^4.7.2",
+    "throttle-debounce": "^5.0.0",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3.16.2",
+    "@types/throttle-debounce": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
