Changed Websocket address

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_WEBSOCKET=wss://45.156.85.100:8000
+VITE_WEBSOCKET=wss://socket.konradsimlinger.dev
 VITE_HARMONYHUB=https://harm.konradsimlinger.dev
