--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "remixicon-react": "^1.0.0",
     "socket.io-client": "^4.7.2",
     "throttle-debounce": "^5.0.0",
+    "tone": "^14.7.77",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
