Progress on new and improved socket pipeline

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_WEBSOCKET=wss://socket.konradsimlinger.dev
+VITE_WEBSERVER=https://socket.konradsimlinger.dev
 VITE_HARMONYHUB=https://harm.konradsimlinger.dev
