--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3.16.2",
     "@types/throttle-debounce": "^5.0.2",
+    "@types/wicg-file-system-access": "^2023.10.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
